Addresses item-header-content running full width of member header, add % width to prevent stats dropping down a line. Add height to stats to match avatar height  and table properties to vertically align ul list to middle - improves balance on long updates.

--- a/_inc/css/status.css
+++ b/_inc/css/status.css
@@ -2568,14 +2568,21 @@ position: fixed;
 float: right;
 font-size: 1.1em;
 color: #888;
+display: table;
 border-left: 1px solid #ccc;
 padding: 10px 0 10px 20px;
 width: 20%;
+height: 150px;
 clear: none;
 border-top: none;
 }
+#member-stats ul {
+display: table-cell;
+vertical-align: middle;
+}
 #item-header-content {
 float: left;
+width: 55%;
 }
 
 }
